# geminibyexample

./: 404.html  CONTRIBUTING.md  README.md  README_MKDOCS.md  example.env  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: deploy.yml
agentic-behaviour/: index.html
agentic-behaviour/code-execution/: index.html
agentic-behaviour/function-calling-tool-use/: index.html
agentic-behaviour/grounded-responses-with-search-tool/: index.html
agentic-behaviour/model-context-protocol/: index.html
audio/: index.html
audio/audio-question-answering/: index.html
audio/audio-summarization/: index.html
audio/audio-transcription/: index.html
docs/: index.md
docs/agentic-behaviour/: code-execution.md  function-calling-tool-use.md  grounded-responses-with-search-tool.md  index.md  model-context-protocol.md
docs/audio/: audio-question-answering.md  audio-summarization.md  audio-transcription.md  index.md
docs/images/: bounding-boxes.md  edit-an-image.md  image-generation-gemini-and-imagen.md  image-question-answering.md  image-segmentation.md  index.md
docs/miscellaneous/: concurrent-requests-and-generation.md  embeddings-generation.md  index.md  litellm.md  rate-limits-and-retries.md  safety-settings-and-filters.md
docs/pdfs-and-other-data-types/: extract-structured-data-from-a-pdf.md  index.md  pdf-and-csv-data-analysis-and-summarization.md  translate-documents.md
docs/text/: index.md  (+5 more)
images/: index.html
miscellaneous/: index.html
pdfs-and-other-data-types/: index.html
search/: search_index.json
text/: index.html
token-counting-context-windows/: index.html
video/: index.html
(+43 files in other folders)
